# 2019_GIST_ROBOTICS_GROUP5

./: README.md
Map/: map.pgm  map.yaml
python scripts/: cv_test_node.py  getTrashPos.py
ros_packages/healthcare_robotics_uwb_sub/: CMakeLists.txt  package.xml
ros_packages/healthcare_robotics_uwb_sub/launch/: uwb_sub_cpp.launch  uwb_sub_py.launch
ros_packages/healthcare_robotics_uwb_sub/msg/: msgAnchorRanges.msg
ros_packages/healthcare_robotics_uwb_sub/script/: uwb_sub.py
ros_packages/healthcare_robotics_uwb_sub/src/: hc_uwb_sub.cpp
ros_packages/kong_test/: CMakeLists.txt  package.xml
ros_packages/kong_test/src/: kong_test_node.py
ros_packages/robotics_main/: CMakeLists.txt  package.xml
ros_packages/robotics_main/src/: robotics_main_node.py
ros_packages/robotics_main/srv/: GetObjectType.srv  ImagePos.srv  ObjectType.srv
